objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Call_Attempts__c</fullName>
        <description>Number of calls on a Campaign based on the Campaign Member&apos;s Activity History</description>
        <label>Call Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Five9LSP__Five9_List_ID_For_Delete__c</fullName>
        <label>Five9 List ID For Delete</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9LSP__Five9_List_ID__c</fullName>
        <label>Five9 List ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_1__c</fullName>
        <description>Five9 Phone 1</description>
        <formula>IF( Contact.HomePhone =&quot;&quot;, Lead.Phone, Contact.HomePhone)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_2__c</fullName>
        <formula>IF(  Contact.MobilePhone  =&quot;&quot;,  Lead.MobilePhone , Contact.MobilePhone)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Activity__c</fullName>
        <label>Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Clicked</fullName>
                </value>
                <value>
                    <fullName>Opened</fullName>
                </value>
                <value>
                    <fullName>Bounced</fullName>
                </value>
                <value>
                    <fullName>Unsubscribed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>Call_Campaign_SFDC2</fullName>
        <active>true</active>
        <label>Call Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>Email_Campaign</fullName>
        <active>true</active>
        <label>Email Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>Web_Campaign</fullName>
        <active>true</active>
        <label>Web Campaign</label>
    </recordTypes>
    <sharingModel>ControlledByCampaign</sharingModel>
</CustomObject>